--- a/src/pages/pricing.astro
+++ b/src/pages/pricing.astro
@@ -2,170 +2,177 @@
 import Page from '../layouts/Page.astro'
 ---
 <Page title="Pricing">
-    <section>
-        <p>At Judo Central Coast, we believe in transparency and openness.</p>
-        <p>Our prices are listed below. For any questions, please don't hesitate
-        to <a href="/contact">contact us</a>.</p>
-    </section>
-    <section>
-        <h1>Mat Fees</h1>
-        <ul class="prices">
-            <li>
-                <h2>Trial Week</h2>
-                <div class="free">
-                    <p>Your first week is on us!</p>
-                    <p class="price">FREE</p>
-                </div>
-            </li>
-            <li>
-                <h2>Juniors</h2>
-                <div class="monthly">
-                    <p>1 Month</p>
-                    <p class="price">$60</p>
-                </div>
-                <div class="quarterly">
-                    <p>School Term</p>
-                    <p class="price">$150</p>
-                </div>
-            </li>
-            <li>
-                <h2>Adults</h2>
-                <div class="monthly">
-                    <p>1 Month</p>
-                    <p class="price">$80</p>
-                </div>
-                <div class="quarterly">
-                    <p>3 Months</p>
-                    <p class="price">$220</p>
-                </div>
-                <div class="casual">
-                    <p>Day Pass</p>
-                    <p class="price">$20</p>
-                </div>
-            </li>
-        </ul>
-    </section>
-    <section>
-        <h1>Registration (Judo NSW)</h1>
-        <p>
-            In order to cover insurance, allow you to visit other clubs,
-            be eligible for a nationally accredited grade or enter competitions,
-            you will need a Judo NSW yearly membership.
-        </p>
-        <p>
-            If this is your first time trying Judo, you can sign up for a FREE four
-            week trial membership after visiting us for your free trial class.
-        </p>
-        <p>
-            Prices at the time of writing are $150 for Juniors and $190 for Adults per year.
-        </p>
-        <p>
-            This membership can be obtained via the
-            <a href="https://www.revolutionise.com.au/judonsw/rego">Judo NSW portal</a>.
-        </p>
-        <p>
-            If you have any questions please feel free to <a href="/contact">contact us</a>.
-        </p>
-    </section>
-    <section>
-        <h1>Other Costs</h1>
+  <section>
+    <p>At Judo Central Coast, we believe in transparency and openness.</p>
+    <p>Our prices are listed below. For any questions, please don't hesitate
+      to <a href="/contact">contact us</a>.</p>
+  </section>
+  <section>
+    <h1>Mat Fees</h1>
+    <ul class="prices">
+      <li>
+        <h2>Trial Week</h2>
+        <div class="free">
+          <p>Your first week is on us!</p>
+          <p class="price">FREE</p>
+        </div>
+      </li>
+      <li>
+        <h2>Juniors</h2>
+        <div class="monthly">
+          <p>1 Month</p>
+          <p class="price">$60</p>
+        </div>
+        <div class="quarterly">
+          <p>School Term</p>
+          <p class="price">$150</p>
+        </div>
+      </li>
+      <li>
+        <h2>Adults</h2>
+        <div class="monthly">
+          <p>1 Month</p>
+          <p class="price">$80</p>
+        </div>
+        <div class="quarterly">
+          <p>3 Months</p>
+          <p class="price">$220</p>
+        </div>
+        <div class="casual">
+          <p>Day Pass</p>
+          <p class="price">$20</p>
+        </div>
+      </li>
+    </ul>
+  </section>
+  <section>
+    <h1>Registration (Judo NSW)</h1>
+    <p>
+      In order to cover insurance, allow you to visit other clubs,
+      be eligible for a nationally accredited grade or enter competitions,
+      you will need a Judo NSW yearly membership.
+    </p>
+    <p>
+      If this is your first time trying Judo, you can sign up for a FREE four
+      week trial membership after visiting us for your free trial class.
+    </p>
+    <p>
+      Prices at the time of writing are $150 for Juniors and $190 for Adults per year.
+    </p>
+    <p>
+      This membership can be obtained via the
+      <a href="https://www.revolutionise.com.au/judonsw/rego">Judo NSW portal</a>.
+    </p>
+    <p>
+      If you have any questions please feel free to <a href="/contact">contact us</a>.
+    </p>
+  </section>
+  <section>
+    <h1>Other Costs</h1>
 
-        <ul class="text-list">
-            <li>
-                <h4>Gradings</h4>
-                <p>$40 - includes belt and nationally accredited grading certificate.</p>
-            </li>
-            <li>
-                <h4>Uniforms</h4>
-                <div>
-                    <p>
-                        We do not require "club official" uniforms but recommend those sold by
-                        <a href="https://www.essimo.com.au/">Essimo Australia</a>. Note that
-                        you do not need this for your first few classes to try things out.
-                    </p>
-                    <p>
-                        For kid's sizes, these are usually between $50 to $100 and for adults usually
-                        between $75 to $150 depending on size and durability.
-                    </p>
-                </div>
-            </li>
-        </ul>
+    <ul class="text-list">
+      <li>
+        <h4>Gradings</h4>
+        <p>$40 - includes belt and nationally accredited grading certificate.</p>
+      </li>
+      <li>
+        <h4>Uniforms</h4>
+        <div>
+          <p>
+            We do not require "club official" uniforms but recommend those sold by
+            <a href="https://www.essimo.com.au/">Essimo Australia</a>. Note that
+            you do not need this for your first few classes to try things out.
+          </p>
+          <p>
+            For kid's sizes, these are usually between $50 to $100 and for adults usually
+            between $75 to $150 depending on size and durability.
+          </p>
+        </div>
+      </li>
+      <li>
+        <h4>Private Class</h4>
+        <div>
+          <p>Available on request only. See <a href="/classes#private">here</a> for details.</p>
+          <p>$100 per hour for one to two people, $50 per person there-after.</p>
+        </div>
+      </li>
+    </ul>
 
 
-    </section>
+  </section>
 </Page>
 
 <style>
 a {
-    @apply text-primary;
+  @apply text-primary;
 }
 
 section {
-    @apply flex flex-col gap-4 w-full max-w-4xl mx-auto mb-6;
+  @apply flex flex-col gap-4 w-full max-w-4xl mx-auto mb-6;
 
-    h1 {
-        @apply text-center sm:text-left font-bold text-2xl;
-    }
+  h1 {
+    @apply text-center sm:text-left font-bold text-2xl;
+  }
 
-    h4 {
-        @apply font-bold;
-    }
+  h4 {
+    @apply font-bold;
+  }
 
-    ul.prices {
-        @apply sm:ml-8 flex flex-col gap-6 sm:gap-2;
+  ul.prices {
+    @apply sm:ml-8 flex flex-col gap-6 sm:gap-2;
 
-        li {
-            @apply flex flex-col sm:flex-row gap-2 w-full;
+    li {
+      @apply flex flex-col sm:flex-row gap-2 w-full;
 
-            h2 {
-                @apply font-bold sm:flex-none sm:w-36 text-xl;
-            }
+      h2 {
+        @apply font-bold sm:flex-none sm:w-36 text-xl;
+      }
 
-            div {
-                @apply flex-1 text-center p-2 flex flex-col gap-2;
+      div {
+        @apply flex-1 text-center p-2 flex flex-col gap-2;
 
-                .price {
-                    @apply font-bold text-xl;
-                }
-            }
+        .price {
+          @apply font-bold text-xl;
         }
+      }
     }
+  }
 
-    ul.text-list {
-        @apply sm:ml-8 flex flex-col gap-6 sm:gap-4;
+  ul.text-list {
+    @apply sm:ml-8 flex flex-col gap-6 sm:gap-4;
 
-        li {
-            @apply flex flex-col sm:flex-row gap-6 w-full;
+    li {
+      @apply flex flex-col sm:flex-row gap-2 sm:gap-6 w-full;
 
-            h2 {
-                @apply font-bold sm:flex-none sm:w-36 text-xl;
-            }
+      h4 {
+        @apply font-bold sm:flex-none sm:w-36 text-lg sm:text-right;
+      }
 
-            div {
-                @apply flex-1 flex flex-col gap-2;
+      div {
+        @apply flex-1 flex flex-col gap-2;
 
-                .price {
-                    @apply font-bold text-xl;
-                }
-            }
+        .price {
+          @apply font-bold text-xl;
         }
+      }
     }
+  }
 }
 
 .free {
-    @apply bg-lime-500 dark:bg-lime-900;
+  @apply bg-lime-500 dark:bg-lime-900;
 }
 
 .monthly {
-    @apply bg-sky-500 dark:bg-sky-900;
+  @apply bg-sky-500 dark:bg-sky-900;
 }
 
 .quarterly {
-    @apply bg-emerald-500 dark:bg-emerald-900;
+  @apply bg-emerald-500 dark:bg-emerald-900;
 }
 
 .casual {
-    @apply bg-rose-500 dark:bg-rose-900;
+  @apply bg-rose-500 dark:bg-rose-900;
 }
 
 </style>
