--- a/src/pages/timetable.astro
+++ b/src/pages/timetable.astro
@@ -8,31 +8,31 @@ import Page from '../layouts/Page.astro'
           <ul>
               <li>
                   <div class="time">12:00pm - 1:30pm</div>
-                  <div class="session erina adults">
+                  <a href="/classes#adults" class="session erina adults">
                       <div>Adults and Teens</div>
                       <div class="location">Erina</div>
-                  </div>
+                  </a>
               </li>
               <li>
                   <div class="time">4:00pm - 5:00pm</div>
-                  <div class="session erina mini">
+                  <a href="/classes#kids" class="session erina mini">
                       <div>Mini Kids (5 - 8 years)</div>
                       <div class="location">Erina</div>
-                  </div>
+                  </a>
               </li>
               <li>
                   <div class="time">5:00pm - 6:00pm</div>
-                  <div class="session erina kids">
+                  <a href="/classes#kids" class="session erina kids">
                       <div>Kids (9 - 12 years)</div>
                       <div class="location">Erina</div>
-                  </div>
+                  </a>
               </li>
               <li>
                   <div class="time">7:30pm - 9:00pm</div>
-                  <div class="session erina adults">
+                  <a href="/classes#adults" class="session erina adults">
                       <div>Adults and Teens</div>
                       <div class="location">Erina</div>
-                  </div>
+                  </a>
               </li>
           </ul>
       </div>
@@ -42,51 +42,51 @@ import Page from '../layouts/Page.astro'
           <ul>
               <li>
                   <div class="time">6:00pm - 7:30pm</div>
-                  <div class="session erina teen-boys">
+                  <a href="/classes#teen-boys" class="session erina teen-boys">
                       <div>Teen Boys</div>
                       <div class="location">Erina</div>
-                  </div>
+                  </a>
               </li>
               <li>
                   <div class="time">7:30pm - 9:00pm</div>
-                  <div class="session erina adults">
+                  <a href="/classes#titans" class="session erina adults">
                       <div>Tuesday Titans Judo Comp Training</div>
                       <div class="location">Erina</div>
-                  </div>
+                  </a>
               </li>
           </ul>
       </div>
 
-      <div class="day">
+      <div class="day">scroll-mt-96
           <h1>Wednesday</h1>
           <ul>
               <li>
                   <div class="time">10:00am - 11:30am</div>
-                  <div class="session erina adults">
+                  <a href="/classes#adults" class="session erina adults">
                       <div>Adults and Teens</div>
                       <div class="location">Erina</div>
-                  </div>
+                  </a>
               </li>
               <li>
                   <div class="time">4:00pm - 5:00pm</div>
-                  <div class="session erina mini">
+                  <a href="/classes#kids" class="session erina mini">
                       <div>Mini Kids (5 - 8 years)</div>
                       <div class="location">Erina</div>
-                  </div>
+                  </a>
               </li>
               <li>
                   <div class="time">5:00pm - 6:00pm</div>
-                  <div class="session erina kids">
+                  <a href="/classes#kids" class="session erina kids">
                       <div>Kids (9 - 12 years)</div>
                       <div class="location">Erina</div>
-                  </div>
+                  </a>
               </li>
               <li>
                   <div class="time">6:30pm - 8:00pm</div>
-                  <div class="session niagara-park open-mat">
+                  <a href="/classes#open-mat" class="session niagara-park open-mat">
                       <div>Judo and Jiu Jitsu Open Training</div>
                       <div class="location">Niagara Park</div>
-                  </div>
+                  </a>
               </li>
           </ul>
       </div>
@@ -96,17 +96,17 @@ import Page from '../layouts/Page.astro'
           <ul>
               <li>
                   <div class="time">5:00pm - 6:00pm</div>
-                  <div class="session erina teen-girls">
+                  <a href="/classes#teen-girls" class="session erina teen-girls">
                       <div>Teen Girls</div>
                       <div class="location">Erina</div>
-                  </div>
+                  </a>
               </li>
               <li>
                   <div class="time">7:30pm - 9:00pm</div>
-                  <div class="session erina adults">
+                  <a href="/classes#adults" class="session erina adults">
                       <div>Adults and Teens</div>
                       <div class="location">Erina</div>
-                  </div>
+                  </a>
               </li>
           </ul>
       </div>
@@ -116,25 +116,25 @@ import Page from '../layouts/Page.astro'
           <ul>
               <li>
                   <div class="time">10:00am - 11:30am</div>
-                  <div class="session erina adults">
+                  <a href="/classes#adults" class="session erina adults">
                       <div>Adults and Teens</div>
                       <div class="location">Erina</div>
-                  </div>
+                  </a>
               </li>
               <li>
                   <div class="time">5:30pm - 6:30pm</div>
-                  <div class="session niagara-park mixed-kids">
+                  <a href="/classes#kids" class="session niagara-park mixed-kids">
                       <div>Mini Kids/Kids Combined (5-12 years)</div>
                       <div>Niagara Park</div>
-                  </div>
+                  </a>
               </li>
               <li>
                   <div class="time">6:30pm - 8:00pm</div>
-                  <div class="session niagara-park adults">
+                  <a href="/classes#adults" class="session niagara-park adults">
                       <div>Adults and Teens</div>
                       <div>Niagara Park</div>
-                  </div>
-              </li>
+                  </a>
+              </li>scroll-mt-96
           </ul>
       </div>
 
@@ -143,24 +143,24 @@ import Page from '../layouts/Page.astro'
           <ul>
               <li>
                   <div class="time">9:00am - 10:00am</div>
-                  <div class="session erina mini">
+                  <a href="/classes#kids" class="session erina mini">
                       <div>Mini Kids (5 - 8 years)</div>
                       <div class="location">Erina</div>
-                  </div>
+                  </a>
               </li>
               <li>
                   <div class="time">10:00am - 11:00am</div>
-                  <div class="session erina kids">
+                  <a href="/classes#kids" class="session erina kids">
                       <div>Kids (9 - 12 years)</div>
                       <div class="location">Erina</div>
-                  </div>
+                  </a>
               </li>
               <li>
                   <div class="time">3:00pm - 5:00pm</div>
-                  <div class="session erina adults">
+                  <a href="/classes#adults" class="session erina adults">
                       <div>Adults and Teens</div>
                       <div>Erina</div>
-                  </div>
+                  </a>
               </li>
           </ul>
       </div>
@@ -170,10 +170,10 @@ import Page from '../layouts/Page.astro'
           <ul>
               <li>
                   <div class="time">11:00am - 12:30pm</div>
-                  <div class="session niagara-park open-mat">
+                  <a href="/classes#open-mat" class="session niagara-park open-mat">
                       <div>Judo and Jiu Jitsu Open Training</div>
                       <div class="location">Erina</div>
-                  </div>
+                  </a>
               </li>
           </ul>
       </div>
