timetable styles missed

--- a/src/pages/timetable.astro
+++ b/src/pages/timetable.astro
@@ -125,14 +125,14 @@ import Page from '../layouts/Page.astro'
                   <div class="time">5:30pm - 6:30pm</div>
                   <a href="/classes#kids" class="session niagara-park mixed-kids">
                       <div>Mini Kids/Kids Combined (5-12 years)</div>
-                      <div>Niagara Park</div>
+                      <div class="location">Niagara Park</div>
                   </a>
               </li>
               <li>
                   <div class="time">6:30pm - 8:00pm</div>
                   <a href="/classes#adults" class="session niagara-park adults">
                       <div>Adults and Teens</div>
-                      <div>Niagara Park</div>
+                      <div class="location">Niagara Park</div>
                   </a>
               </li>scroll-mt-96
           </ul>
@@ -159,7 +159,7 @@ import Page from '../layouts/Page.astro'
                   <div class="time">3:00pm - 5:00pm</div>
                   <a href="/classes#adults" class="session erina adults">
                       <div>Adults and Teens</div>
-                      <div>Erina</div>
+                      <div class="location">Erina</div>
                   </a>
               </li>
           </ul>
